# flet-permission-handler

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  mkdocs-deploy.yml
changelog/: index.html
docs/: index.md  permission.md  permission_handler.md
docs/types/: permission_status.md
examples/permission_handler_example/: pyproject.toml
examples/permission_handler_example/src/: main.py
license/: index.html
permission_handler/: index.html
search/: search_index.json
src/flet_permission_handler/: __init__.py  permission_handler.py  types.py
src/flutter/flet_permission_handler/: pubspec.yaml
src/flutter/flet_permission_handler/lib/src/: permission_handler.dart
types/permission/: index.html
types/permission_status/: index.html
