[project]
name = "flet-permission-handler"
version = "0.2.0"
description = "PermissionHandler control for Flet"
readme = "README.md"
authors = [
    { name = "Flet contributors", email = "hello@flet.dev" }
]
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "flet",
]

[project.urls]
Homepage = "https://flet.dev"
Documentation = "https://flet.dev/docs/controls/permissionhandler/"
Repository = "https://github.com/flet-dev/flet-permission-handler"
Issues = "https://github.com/flet-dev/flet-permission-handler/issues"

[tool.setuptools.package-data]
"flutter.flet_permission_handler" = ["**/*"]

[dependency-groups]
dev = [
    # "flet",
    # "flet-cli",
    # "flet-desktop",
    "pre-commit>=4.2.0",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mike",
    "markdown>=3.6",
    "pymdown-extensions",
    "mkdocs-glightbox",
    "pygments>=2.16",
]

[tool.uv]
default-groups = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
