[project]
name = "flet-permission-handler"
version = "0.2.0"
description = "A Flet extension that simplifies working with permissions in your app."
readme = "README.md"
authors = [
    { name = "Flet contributors", email = "hello@flet.dev" }
]
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "flet >=0.70.0.dev0",
]

[project.urls]
Homepage = "https://flet.dev"
Documentation = "https://flet-dev.github.io/flet-permission-handler"
Repository = "https://github.com/flet-dev/flet-permission-handler"
Issues = "https://github.com/flet-dev/flet-permission-handler/issues"

[tool.setuptools.package-data]
"flutter.flet_permission_handler" = ["**/*"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.7",
]
docs = [
    "mkdocs",
    "mkdocs-material==9.6.14",
    "mkdocstrings-python>=1.16.12",
    "mkdocstrings-python-xref>=1.16.3",
    "mike>=2.1.3",
    "markdown>=3.6",
    "pymdown-extensions==10.16",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-section-index>=0.3.10",
    "griffe-modernized-annotations>=1.0.8",
    "pygments>=2.16",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py39"
fix = true
show-fixes = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I"
]
preview = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
